<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".user.ui.apartments.ApartmentListFragment">


<AutoCompleteTextView
    android:id="@+id/tv_auto_complete"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/border"
    android:drawableStart="@drawable/search"
    android:drawablePadding="8dp"
    android:hint="@string/search_your_apartment"
    android:completionHint="@string/search_your_apartment"
    android:popupBackground="@color/LightSkyBlue"
    android:padding="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/view19" />



<View
    android:id="@+id/view19"
    android:layout_width="match_parent"
    android:layout_height="4dp"
    android:layout_gravity="center"
    android:layout_marginTop="8dp"
    android:background="@color/LightGrey"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView91" />

<TextView
    android:id="@+id/textView91"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:padding="8dp"
    android:text="@string/state"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Spinner
    android:id="@+id/state_spinner"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="@+id/textView91"
    app:layout_constraintEnd_toStartOf="@+id/tv_one_day_digital_transaction_txn_slr"
    app:layout_constraintStart_toEndOf="@+id/textView91"
    app:layout_constraintTop_toTopOf="@+id/textView91" />

<TextView
    android:id="@+id/tv_one_day_digital_transaction_txn_slr"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:text="@string/city"
    android:textSize="16sp"
    app:layout_constraintEnd_toStartOf="@id/city_spinner"
    app:layout_constraintTop_toTopOf="@+id/textView91" />

<Spinner
    android:id="@+id/city_spinner"
    android:layout_width="120dp"
    android:layout_height="0dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintBottom_toBottomOf="@+id/tv_one_day_digital_transaction_txn_slr"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/tv_one_day_digital_transaction_txn_slr" />

<TextView
    android:id="@+id/tv_no_apartment_found"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/no_apartment_found"
    android:textSize="14sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_auto_complete" />

<TextView
    android:id="@+id/tv_add_new_apartment_activity_launch"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:text="@string/add_now"
    android:textColor="@color/SkyBlue"
    android:textSize="14sp"
    app:layout_constraintStart_toEndOf="@+id/tv_no_apartment_found"
    app:layout_constraintTop_toTopOf="@+id/tv_no_apartment_found" />

<TextView
    android:id="@+id/tv_get_started_activity_launch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    android:layout_marginBottom="2dp"
    android:background="@color/DarkBlue"
    android:gravity="center"
    android:padding="8dp"
    android:text="@string/get_started"
    android:textColor="@color/White"
    android:textSize="24sp"
    android:textStyle="bold"
    android:visibility="invisible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/tv_proceed_add_apartment_activity_launch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    android:layout_marginBottom="2dp"
    android:background="@color/DarkBlue"
    android:gravity="center"
    android:padding="8dp"
    android:text="@string/add_apartment"
    android:textColor="@color/White"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/textView126"
    android:layout_width="100dp"
    android:layout_height="40dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:gravity="center|start"
    android:text="@string/flat_number"
    android:labelFor="@+id/flat_number_activity_launch"
    android:textColor="@color/Black"
    android:textSize="14sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_no_apartment_found" />

<EditText
    android:id="@+id/flat_number_activity_launch"
    android:layout_width="250dp"
    android:layout_height="0dp"
    android:layout_marginEnd="8dp"
    android:gravity="center|end"
    android:padding="8dp"
    android:textColor="@color/DarkGrey"
    android:textSize="14sp"
    app:layout_constraintBottom_toBottomOf="@+id/textView126"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/textView126"
    android:importantForAutofill="no"
    android:inputType="text"
    tools:ignore="TextFields" />

<TextView
    android:id="@+id/textView128"
    android:layout_width="100dp"
    android:layout_height="40dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="10dp"
    android:gravity="center|start"
    android:labelFor="@+id/address_proof_activity_launch"
    android:text="@string/address_proof"
    android:visibility="gone"
    android:textColor="@color/Black"
    android:textSize="14sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView126" />

<EditText
    android:id="@+id/address_proof_activity_launch"
    android:layout_width="250dp"
    android:layout_height="0dp"
    android:layout_marginEnd="8dp"
    android:gravity="center|end"
    android:inputType="textPersonName"
    android:padding="8dp"
    android:visibility="gone"
    android:text="@string/documents_like_gas_bill_phone_bill"
    android:textColor="@color/DarkGrey"
    android:textSize="14sp"
    app:layout_constraintBottom_toBottomOf="@+id/textView128"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/textView128"
    android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>