<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

    <TextView
            android:id="@+id/btn_buy_detail"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:background="@drawable/buy_button_round_corner"
            android:padding="0dp"
        android:gravity="center"
            android:text="@string/buy"
            android:textColor="@color/White"
            android:textSize="14sp"
            android:textStyle="bold" />

    <LinearLayout

            android:layout_width="80dp"
            android:layout_height="25dp"

            android:orientation="horizontal"
            android:id="@+id/btn_lay_detail"
            android:layout_marginEnd="12dp"
            android:visibility="gone">

        <TextView

                android:id="@+id/tv_minus_detail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/quantity_btn"
                android:gravity="center"
                android:text="@string/minus"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        <TextView

                android:id="@+id/tv_quantity_detail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/White"
                android:gravity="center"

                android:textColor="@android:color/black"
                android:textSize="14sp" />

        <TextView

                android:id="@+id/tv_plus_detail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/quantity_btn"
                android:gravity="center"
                android:text="@string/plus"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
    </LinearLayout>

</merge>
